# Reelt

./: .bashrc  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: docs.txt
examples/: hello  hello.melf  script.c
src/: CLI.cpp  disassembler.cpp  editor.cpp  elf_parser.cpp  injector.cpp  main.cpp  utils.cpp  version.cpp
src/include/: disassembler.hpp  editor.hpp  elf_parser.hpp  injector.hpp  utils.hpp  version.hpp
